--- a/index.html
+++ b/index.html
@@ -1,12 +1,66 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Kuat Hadianto</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Website is on maintenance</title>
+    <!-- FontAwesome CDN -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
+        crossorigin="anonymous">
+    <!-- Bootstrap CDN -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <h1>Hello World!</h1>
+    <div class="container cs-full-height">
+        <div class="row align-items-center cs-full-height">
+            <div class="col-md-12 text-center">
+                <h1>Hi there!</h1>
+                <p class="lead">Firstly, thanks for your visit, but I'm sorry to inform you, that this website is currently on maintenance.
+                    In the meantime, you can visit my social media. Please come back soon! :)</p>
+                <hr>
+                <nav class="navbar navbar-expand navbar-light">
+                    <ul class="navbar-nav mr-auto ml-auto">
+                        <li class="nav-item">
+                            <a href="https://www.facebook.com/kuat.hadianto" class="nav-link" target="_blank">
+                                <i class="fab fa-facebook-f fa-lg fa-fw"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="https://twitter.com/kuathadianto" class="nav-link" target="_blank">
+                                <i class="fab fa-twitter fa-lg fa-fw"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="https://www.instagram.com/kuathadianto/" class="nav-link" target="_blank">
+                                <i class="fab fa-instagram fa-lg fa-fw"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="https://www.youtube.com/kuathadianto" class="nav-link" target="_blank">
+                                <i class="fab fa-youtube fa-lg fa-fw"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="https://github.com/kuathadianto" class="nav-link" target="_blank">
+                                <i class="fab fa-github fa-lg fa-fw"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="https://steamcommunity.com/id/kuathadianto/" class="nav-link" target="_blank">
+                                <i class="fab fa-steam fa-lg fa-fw"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+                <p>Copyright &copy; 2018 - <a href="http://kuath.com">Kuat Hadianto</a></p>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
