--- a/index.html
+++ b/index.html
@@ -8,23 +8,21 @@ layout: default
 <section id="intro">
   <div class="container">
     <div class="row">
-      <div class="col-12">
-        <div class="kh-intro-bottom">
-          <h1 class="display-1">{{ site.data.intro.name }}</h1>
-          <p class="lead">{{ site.data.intro.desc }}</p>
-          <hr class="my-4">
-          <nav class="navbar navbar-expand navbar-light">
-            <ul class="navbar-nav mr-auto">
-              {% for s in site.data.intro.socials %}
-              <li class="nav-item">
-                <a href="{{ s.l }}" class="nav-link" target="_blank">
-                  <i class="fab fa-{{ s.i }} fa-lg fa-fw"></i>
-                </a>
-              </li>
-              {% endfor %}
-            </ul>
-          </nav>
-        </div>
+      <div class="col-12 kh-intro-bottom">
+        <h1 class="display-1">{{ site.data.intro.name }}</h1>
+        <p class="lead">{{ site.data.intro.desc }}</p>
+        <hr class="my-4">
+        <nav class="navbar navbar-expand navbar-light">
+          <ul class="navbar-nav mr-auto">
+            {% for s in site.data.intro.socials %}
+            <li class="nav-item">
+              <a href="{{ s.l }}" class="nav-link" target="_blank">
+                <i class="fab fa-{{ s.i }} fa-lg fa-fw"></i>
+              </a>
+            </li>
+            {% endfor %}
+          </ul>
+        </nav>
       </div>
     </div>
   </div>
@@ -63,17 +61,17 @@ layout: default
           <div class="col-md-6">
             {% for s in site.data.skills.skills %}
             <div class="row">
-              <div class="col-1 kh-text-center">
+              <div class="col-lg-1 col-2 kh-text-center">
                 <p><a target="_blank" href="{{ s.l }}"><i data-toggle="tooltip" data-placement="left" title="{{ s.t }}"
                       class="fab fa-fw fa-2x fa-{{ s.i }}"></i></a></p>
               </div>
-              <div class="col-10">
+              <div class="col-lg-10 col-8">
                 <div class="progress">
                   <div class="progress-bar progress-bar-striped bg-info progress-bar-animated" role="progressbar" style="width: {{ s.p }}%;"
                     aria-valuenow="{{ s.p }}" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
-              <div class="col-1">
+              <div class="col-lg-1 col-2">
                 <p class="lead">{{ s.p }}%</p>
               </div>
             </div>
