Added 'modified' collaboration section.

--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@ layout: wanda
 {% include hero.html %}
 {% include introduction.html %}
 {% include profile.html %}
+{% include collaboration.html %}
 {% include footer.html %}
